# nix-rs-bindings

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE.md  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: depdendabot.yml
bindgen/: all.html  constant.CargoCallbacks.html  constant.DEFAULT_ANON_FIELDS_PREFIX.html  constant.LATEST_STABLE_RUST.html  enum.Abi.html  enum.AliasVariation.html  enum.BindgenError.html  enum.EnumVariation.html  enum.FieldVisibilityKind.html  enum.Formatter.html  enum.MacroTypeVariation.html  enum.NonCopyUnionStyle.html  enum.RustEdition.html  fn.builder.html  fn.clang_version.html  index.html  struct.Bindings.html  struct.Builder.html  struct.CargoCallbacks.html  struct.ClangVersion.html  struct.CodegenConfig.html  struct.RustTarget.html
common-build/: Cargo.toml
common-build/src/: lib.rs
example_eval_expression/: all.html  fn.main.html  fn.my_get_string_cb.html  index.html  sidebar-items.js
increment/: all.html  fn.increment.html  fn.nix_plugin_entry.html  index.html  sidebar-items.js
itertools/: enum.Diff.html  enum.Either.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Position.html  fn.all.html  fn.any.html  fn.cloned.html  fn.diff_with.html  fn.equal.html  fn.iterate.html  fn.partition.html  fn.repeat_n.html  fn.unfold.html  trait.Itertools.html  trait.MultiUnzip.html  trait.PeekingNext.html
nix-exprc-sys/: Cargo.toml  build.rs
nix-exprc-sys/src/: lib.rs
nix-flakec-sys/: Cargo.toml  build.rs
nix-mainc-sys/: Cargo.toml  build.rs
nix-storec-sys/: Cargo.toml  build.rs
nix-utilc-sys/: Cargo.toml  build.rs
nix_exprc_sys/: all.html  constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.PTRDIFF_MAX.html  constant.PTRDIFF_MIN.html  constant.SIG_ATOMIC_MAX.html  constant.SIG_ATOMIC_MIN.html  constant.SIZE_MAX.html  constant.UINT16_MAX.html  constant.UINT32_MAX.html  constant.UINT8_MAX.html  constant.UINTPTR_MAX.html  constant.UINT_FAST16_MAX.html  constant.UINT_FAST32_MAX.html  constant.UINT_FAST8_MAX.html  constant.UINT_LEAST16_MAX.html  constant.UINT_LEAST32_MAX.html  constant.UINT_LEAST8_MAX.html  constant.ValueType_NIX_TYPE_ATTRS.html  constant.ValueType_NIX_TYPE_BOOL.html  constant.ValueType_NIX_TYPE_EXTERNAL.html  constant.ValueType_NIX_TYPE_FLOAT.html  (+269 more)
nix_flakec_sys/: all.html  constant.__bool_true_false_are_defined.html  constant.false_.html  constant.nix_err_NIX_ERR_KEY.html  constant.nix_err_NIX_ERR_NIX_ERROR.html  constant.nix_err_NIX_ERR_OVERFLOW.html  constant.nix_err_NIX_ERR_UNKNOWN.html  constant.nix_err_NIX_OK.html  constant.true_.html  enum.nix_err.html  fn.nix_clear_err.html  (+60 more)
(+316 files in other folders)
