[package]
name = "nix-flakec-sys"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for the NIX's libnixflakec library"
repository = "https://github.com/0xCCF4/nix-rs-bindings"
documentation = "https://github.com/NixOS/nix/tree/master/src/libnixflakec"
license = "MIT"
keywords = ["nix", "nixos", "bindings", "nix-api", "library"]
categories = ["external-ffi-bindings"]
links = "nixflakec"

[build-dependencies]

nix-sys-common-build = { path = "../common-build" }

[features]
static = []
shared = []
